# QBC_Single_Cell_Analysis_NGS

./: README.md  custom_job.txt  environment.yml  qbc_conda_env.sh  submit_bash.sh
apps/convert2fcs/: generate_qbcReports.R
apps/flash/: flash
apps/parser/: linux_build.sh
apps/parser/StringAnylizerGUI/: AssemblyInfo.cpp  CUDAParse.cpp  Form1.h  Form1.resX  MyMainClass.cpp  MyMainClass.h  ReadMe.txt  StringAnylizerGUI.vcxproj  kernel.cpp  kernel.cu  kernel.h  kernel_ops.h  licenses.licx  stdafx.cpp  stdafx.h
apps/parser/StringAnylizerGUI/Debug/: StringAnylizerGUI.vcxprojResolveAssemblyReference.cache
apps/parser/StringAnylizerGUI/Debug2/: StringAnylizerGUI.vcxprojResolveAssemblyReference.cache  kernel.cu.cache  kernel.cu.deps
apps/parser/StringAnylizerGUI/Debug2/CudaParse.tlog/: CudaParse.lastbuildstate
apps/parser/StringAnylizerGUI/Release/: StringAnylizerGUI.Form1.resources  StringAnylizerGUI.vcxproj.GenerateResource.Cache  kernel.cu.cache  kernel.cu.deps
apps/parser/StringAnylizerGUI/Release/CudaParse.tlog/: CL.read.1.tlog  CL.write.1.tlog  CudaParse.lastbuildstate  CudaParse.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
apps/parser/cpp/: CMakeLists.txt  ProgramOptions.h  QBCParser.cpp  QBCParser.h  Resources.h  Timer.h  main.cpp
apps/parser/cpp/opt/: boost.cmake
apps/parser/cpp/opt/cpputil/util/: OptionsParser.h
apps/remove_singlets/: jitter.py  singlets_remover.py
apps/seqtk/: seqtk
example/qdata/: AHCA_Codes.txt  SC_Codes.txt  Singlet_settings.txt  oligos.txt
(+14 files in other folders)
